fixed overflow of banner to remove horizontal scroll bar 	modified:   index.html 	modified:   roban.css

--- a/roban.css
+++ b/roban.css
@@ -19,7 +19,7 @@ img{border-style: none;}
 .headshot {position: absolute; top: 25px; right: 150px; border: 0;}
 
 .banner {position: absolute; top: 0px; left: 0px; border: 0; z-index: -1; 
-	 height: 150px}
+	 width:100%; overflow:hidden; text-align:center}
 
 .name {font-size: 1.1em; padding:0px; margin: 0.0em; min-height:50px;
        font-family: "sans-serif"}
